--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.2",
+    "camelcase": "^6.2.0",
+    "firebase": "^7.24.0",
     "react": "^16.13.1",
+    "react-audio-player": "^0.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-h5-audio-player": "^3.5.0",
+    "react-icons": "^3.11.0",
+    "react-jinke-music-player": "^4.19.1",
+    "react-modal": "^3.11.2",
+    "react-player": "^2.7.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "react-stepper-horizontal": "^1.0.11",
+    "react-toastify": "^6.1.0",
+    "react-tooltip": "^4.2.10",
+    "react-webpack": "^0.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
